--- a/privacy.html
+++ b/privacy.html
@@ -1,2 +1,76 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<title>Privacy Policy – NowZNews</title>
+</head>
+<body>
 <h1>Privacy Policy</h1>
-<p>NowzNews Poster is an automation tool that uploads news-style videos to TikTok with the explicit authorization of the user. We do not store, track, or distribute any personal data. All operations occur directly through TikTok’s official API with user approval. No sensitive information is maintained on our servers.</p>
+
+<p>Last updated: November 2025</p>
+
+<p>NowZNews (“we”, “our”, “us”) is an automated content-generation and posting tool that creates short news-style videos and enables users to publish them on TikTok using the TikTok Open API. This Privacy Policy explains how we collect, use, store, and protect your data.</p>
+
+<h2>1. Information We Collect</h2>
+<p>When you connect your TikTok account to NowZNews, we may collect the following information through TikTok’s Open API, with your explicit permission:</p>
+<ul>
+  <li>Your TikTok account ID</li>
+  <li>Basic profile information such as username and avatar</li>
+  <li>Video publishing permissions</li>
+  <li>Access tokens required to upload content on your behalf</li>
+</ul>
+
+<p>We also collect internally generated data such as:</p>
+<ul>
+  <li>Generated video files</li>
+  <li>Auto-generated captions and audio</li>
+  <li>System logs required for debugging</li>
+</ul>
+
+<h2>2. How We Use Your Information</h2>
+<p>We use your data strictly for the following purposes:</p>
+<ul>
+  <li>Generating news-style videos automatically</li>
+  <li>Uploading videos to your TikTok account when you request it</li>
+  <li>Managing upload sessions using TikTok’s API</li>
+  <li>Operating and improving our automation workflow</li>
+</ul>
+
+<p>We do <strong>not</strong> sell, share, or rent your data to any third party.</p>
+
+<h2>3. TikTok API Data</h2>
+<p>We follow all TikTok API usage requirements. TikTok data is used only to:</p>
+<ul>
+  <li>Authenticate your account</li>
+  <li>Generate upload URLs</li>
+  <li>Upload video files</li>
+  <li>Publish content</li>
+</ul>
+
+<p>We do not access or read your private TikTok messages, follower list, or analytics unless TikTok adds such permissions and you explicitly grant them.</p>
+
+<h2>4. Storage and Security</h2>
+<p>We store only what is required for video processing. Video files may be temporarily stored during the automated editing and upload process; they are deleted afterwards. Access tokens are securely stored and automatically refreshed when needed.</p>
+
+<h2>5. User Rights</h2>
+<p>You may:</p>
+<ul>
+  <li>Disconnect NowZNews from your TikTok account at any time</li>
+  <li>Request deletion of stored data</li>
+  <li>Revoke permissions through TikTok’s settings</li>
+</ul>
+
+<h2>6. Third-Party Services</h2>
+<p>NowZNews integrates only with TikTok’s official Open API. No other third-party services are used for authentication or account-level access.</p>
+
+<h2>7. Children's Privacy</h2>
+<p>NowZNews is not intended for individuals under the age of 13.</p>
+
+<h2>8. Changes to This Policy</h2>
+<p>We may update this Privacy Policy occasionally. Continued use of the service means you accept the updated terms.</p>
+
+<h2>9. Contact Us</h2>
+<p>If you have questions about this Privacy Policy, email us at: <strong>abdullah.nowznews@gmail.com</strong></p>
+
+</body>
+</html>
