Terms and Services.html

--- a/terms.html
+++ b/terms.html
@@ -1,2 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<title>Terms of Service – NowZNews</title>
+</head>
+<body>
 <h1>Terms of Service</h1>
-<p>By using NowzNews Poster, you agree to authorize the app to upload your own content to your TikTok account via TikTok’s official API. You understand that all uploads require your explicit authorization. You are responsible for the content you post. This app does not bypass, modify, or interfere with TikTok policies.</p>
+
+<p>Last updated: November 2025</p>
+
+<p>Welcome to NowZNews. By using our automated video creation and posting platform (“Service”), you agree to the following terms:</p>
+
+<h2>1. Description of Service</h2>
+<p>NowZNews automatically creates short-form videos based on trending news topics and can upload them to TikTok using the TikTok Open API. Users authorize the Service to publish videos on their TikTok account.</p>
+
+<h2>2. User Responsibilities</h2>
+<ul>
+  <li>You are responsible for the content generated and posted through the platform.</li>
+  <li>You agree not to use NowZNews for illegal, harmful, or misleading content.</li>
+  <li>You must comply with TikTok’s community guidelines and terms of service.</li>
+</ul>
+
+<h2>3. Permissions</h2>
+<p>By connecting your TikTok account, you grant us permission to:</p>
+<ul>
+  <li>Access your TikTok profile information</li>
+  <li>Upload and publish videos on your behalf</li>
+  <li>Manage upload sessions and video metadata</li>
+</ul>
+
+<p>These permissions may be revoked in the TikTok settings at any time.</p>
+
+<h2>4. Content Ownership</h2>
+<p>You retain all rights to the content generated through NowZNews. We do not claim ownership of any video or media created on your account.</p>
+
+<h2>5. Limitation of Liability</h2>
+<p>We are not responsible for:</p>
+<ul>
+  <li>Incorrect or incomplete news summaries</li>
+  <li>Misuse of the automated posting feature</li>
+  <li>TikTok API outages or upload failures</li>
+  <li>Account suspensions caused by violating TikTok’s policies</li>
+</ul>
+
+<h2>6. Termination</h2>
+<p>You may disconnect or stop using the Service at any time. We may terminate access if you misuse the platform or violate TikTok content rules.</p>
+
+<h2>7. Changes to This Agreement</h2>
+<p>We may modify these Terms as needed. Continued use constitutes acceptance of updated Terms.</p>
+
+<h2>8. Contact Information</h2>
+<p>For questions about these Terms, contact: <strong>abdullah.nowznews@gmail.com</strong></p>
+
+</body>
+</html>
