--- a/terms.html
+++ b/terms.html
@@ -50,7 +50,7 @@
 <p>We may modify these Terms as needed. Continued use constitutes acceptance of updated Terms.</p>
 
 <h2>8. Contact Information</h2>
-<p>For questions about these Terms, contact: <strong>abdullah.nowznews@gmail.com</strong></p>
+<p>For questions about these Terms, contact: <strong>tararabdullah826@gmail.com</strong></p>
 
 </body>
 </html>
