--- a/login-demo.html
+++ b/login-demo.html
@@ -6,18 +6,20 @@
     body {
       font-family: Arial, sans-serif;
       padding: 40px;
+      background: #f5f5f5;
     }
     h1 {
       font-size: 28px;
       margin-bottom: 10px;
+      color: #111;
     }
     p {
       font-size: 18px;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
+      color: #333;
     }
-    .login-btn {
-      display: inline-block;
-      cursor: pointer;
+    .btn-container {
+      margin-top: 20px;
     }
   </style>
 </head>
@@ -26,11 +28,14 @@
   <h1>NowZNews – TikTok Integration Demo</h1>
   <p>Click the button below to simulate TikTok Login (Sandbox Mode).</p>
 
-  <a class="login-btn"
-     href="https://developers.tiktok.com/tools/sandbox/login/?client_key=sbawyqznmjuzkztlay&redirect_uri=https%3A%2F%2Famt147.github.io%2Fnowznews-legal%2F&scope=user.info.basic%2Cuser.info.stats%2Cvideo.upload&response_type=code&state=demo123">
+  <div class="btn-container">
+    <a class="login-btn"
+       href="https://www.tiktok.com/v2/auth/authorize/?client_key=sbawyqznmjuzkztlay&scope=user.info.basic%2Cuser.info.stats%2Cvideo.upload&response_type=code&redirect_uri=https%3A%2F%2Famt147.github.io%2Fnowznews-legal%2F&state=demo123">
       <img src="https://lf16-tiktok-common.ibytedtos.com/obj/tiktok_web_login/web_login/new_login_kit_logo.svg"
-           width="240" alt="Login with TikTok">
-  </a>
+           width="240"
+           alt="Login with TikTok">
+    </a>
+  </div>
 
 </body>
 </html>
