login-demo.html

--- a/login-demo.html
+++ b/login-demo.html
@@ -30,10 +30,9 @@
 
   <div class="btn-container">
     <a class="login-btn"
-       href="https://www.tiktok.com/v2/auth/authorize/?client_key=sbawyqznmjuzkztlay&scope=user.info.basic%2Cuser.info.stats%2Cvideo.upload&response_type=code&redirect_uri=https%3A%2F%2Famt147.github.io%2Fnowznews-legal%2F&state=demo123">
+       href="https://www.tiktok.com/v2/auth/authorize/?client_key=sbawyqznmjuzkztlay&scope=user.info.basic&response_type=code&redirect_uri=https%3A%2F%2Famt147.github.io%2Fnowznews-legal%2F&state=demo123">
       <img src="https://lf16-tiktok-common.ibytedtos.com/obj/tiktok_web_login/web_login/new_login_kit_logo.svg"
-           width="240"
-           alt="Login with TikTok">
+           width="240" alt="Login with TikTok">
     </a>
   </div>
 
