--- a/index.html
+++ b/index.html
@@ -1,18 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>NowZNews – Legal</title>
+<meta charset="UTF-8">
+<title>NowZNews – Real-Time Gen-Z News</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+  body {
+    margin: 0;
+    background: #0C0C0C;
+    color: white;
+    font-family: 'Arial', sans-serif;
+  }
+
+  /* NAVBAR */
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 22px;
+    background: #0C0C0C;
+    border-bottom: 1px solid #1f1f1f;
+    position: sticky;
+    top: 0;
+    z-index: 99;
+  }
+  .logo {
+    font-size: 28px;
+    font-weight: 800;
+    color: #00ff66;
+    letter-spacing: -1px;
+  }
+  .nav-links a {
+    margin-left: 18px;
+    text-decoration: none;
+    color: #BFBFBF;
+    font-size: 14px;
+  }
+
+  /* HERO GEN Z */
+  .hero {
+    padding: 40px 20px;
+    text-align: center;
+    background: linear-gradient(180deg, #00ff66 0%, #0C0C0C 45%);
+  }
+  .hero-title {
+    font-size: 38px;
+    font-weight: 900;
+    text-transform: uppercase;
+    margin-bottom: 8px;
+    color: black;
+  }
+  .hero-sub {
+    font-size: 16px;
+    opacity: 0.9;
+    color: #000;
+  }
+
+  /* TICKER */
+  .ticker {
+    background: #111;
+    padding: 10px 0;
+    font-size: 14px;
+    color: #00ff66;
+    font-weight: bold;
+    text-align: center;
+    border-bottom: 1px solid #1f1f1f;
+  }
+
+  /* TOP STORIES */
+  .stories {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: 18px;
+  }
+  .card {
+    background: #151515;
+    border: 1px solid #222;
+    padding: 15px;
+    border-radius: 12px;
+  }
+  .card h3 {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0 0 8px;
+  }
+  .card p {
+    font-size: 14px;
+    opacity: 0.7;
+  }
+
+  /* VIDEO GRID */
+  .videos {
+    padding: 20px;
+  }
+  .videos h2 {
+    font-size: 22px;
+    margin-bottom: 14px;
+  }
+  .video-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 10px;
+  }
+  .video-thumb {
+    background: #202020;
+    height: 240px;
+    border-radius: 10px;
+  }
+
+  /* TRENDING */
+  .trending {
+    padding: 20px;
+    background: #0f0f0f;
+  }
+  .trending h2 {
+    font-size: 22px;
+    margin-bottom: 14px;
+    color: #00ff66;
+  }
+  .trend-item {
+    padding: 10px;
+    border-bottom: 1px solid #1f1f1f;
+    font-size: 15px;
+  }
+
+  /* ABOUT */
+  .about {
+    padding: 30px 20px;
+    text-align: center;
+    background: #0C0C0C;
+  }
+  .about p {
+    opacity: 0.7;
+    font-size: 14px;
+  }
+
+  /* FOOTER */
+  .footer {
+    text-align: center;
+    padding: 20px;
+    font-size: 13px;
+    opacity: 0.5;
+  }
+
+</style>
 </head>
+
 <body>
-  <h1>NowZNews – Legal Information</h1>
-  <p>This page contains the legal documents for the NowZNews app.</p>
 
-  <ul>
-    <li><a href="privacy.html">Privacy Policy</a></li>
-    <li><a href="terms.html">Terms of Service</a></li>
-  </ul>
+<!-- NAVBAR -->
+<div class="nav">
+  <div class="logo">NOWZNEWS</div>
+  <div class="nav-links">
+    <a href="#">World</a>
+    <a href="#">Tech</a>
+    <a href="#">USA/Canada</a>
+    <a href="privacy.html">Privacy</a>
+    <a href="terms.html">Terms</a>
+    <a href="login.html" style="color:#00ff66;">Login</a>
+  </div>
+</div>
 
-  <p>For questions, contact: <strong>tararabdullah826@gmail.com</strong></p>
-</body>
-</html>
+<!-- HERO -->
+<div class="hero">
+  <div class="hero-title">WE SEE EVERYTHING</div>
+  <div class="hero-sub">Real-time AI powered Gen-Z news. No filters. No delays.</div>
+</div>
+
+<!-- TICKER -->
+<div class="ticker">
+  🔥 BREAKING: New AI laws proposed… | ⚡ Tech stocks surge… | 🌎 Europe faces severe storm…
+</div>
+
+<!-- TOP STORIES -->
+<div class="stories">
+  <div class="card">
+    <h3>🌎 World News</h3>
+    <p>Top global story for Gen-Z readers.</p>
+  </div>
+  <div class="card">
+    <h3>⚡ Tech News</h3>
+    <p>The biggest tech update of today.</p>
+  </div>
+  <div class="card">
+    <h3>🇺🇸 US / Canada</h3>
+    <p>Major breaking events in North America.</p>
+  </div>
+</div>
+
+<!-- VIDEO SECTION -->
+<div class="videos">
+  <h2>🔥 Trending Clips</h2>
+  <div class="video-grid">
+    <div class="video-thumb"></div>
+    <div class="video-thumb"></div>
+    <div class="video-thumb"></div>
+    <div class="video-thumb"></div>
+  </div>
+</div>
+
+<!-- TRENDING BOARD -->
+<div class="trending">
+  <h2>📈 Viral Right Now</h2>
+  <div class="trend-item">#1 AI Law passes parliament</div>
+  <div class="trend-item">#2 New iPhone leak</div>
+  <div class="trend-item">#3 Massive winter storm alert</div>
+</div>
+
+<!-- ABOUT -->
+<div class="about">
+  <h3>About NowZNews</h3>
+  <p>We are a Gen-Z powered AI news broadcasting brand.  
+  Fast, real, and built for today’s attention.</p>
+  <p>Contact: tararabdullah826@gmail.com</p>
+</div>
+
+<!-- FOOTER -->
+<div class="footer">
+  © 2025 NowZNews
